--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
       </nav>
       <a class="btn small" href="#reserv">Book</a>
     </div>
+    <!-- MOBILE MENU BUTTON -->
+    <div class="menu-btn">
+      ☰
+    </div>
+
+  </div>
+
+  <!-- MOBILE DROPDOWN MENU -->
+  <nav class="mobile-menu">
+    <a href="#home">Home</a>
+    <a href="#menu">Menu</a>
+    <a href="#chefs">Chefs</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#reviews">Reviews</a>
+    <a href="#reserv">Reservation</a>
+    <a href="#contact">Contact</a>
+  </nav>
   </header>
 
   <main>
