--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
       </nav>
       <a class="btn small" href="#reserv">Book</a>
     </div>
-    <!-- MOBILE MENU BUTTON -->
-    <div class="menu-btn">
-      ☰
-    </div>
+   <!-- MOBILE BUTTONS -->
+    <div class="menu-btn">☰</div>
+    <div class="close-btn">✕</div>
 
   </div>
 
@@ -229,5 +228,14 @@
       </div>
     </div>
   </footer>
+<script>
+const nav = document.querySelector(".nav");
+const menuBtn = document.querySelector(".menu-btn");
+const closeBtn = document.querySelector(".close-btn");
+
+menuBtn.onclick = () => nav.classList.add("active");
+closeBtn.onclick = () => nav.classList.remove("active");
+</script>
+
 </body>
 </html>
